--- a/crash-course/css/main.css
+++ b/crash-course/css/main.css
@@ -1,1 +1,19 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+body, html {
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat',sans-serif;
+  margin: 0;
+}
+
+body #bg {
+  background-color: #005DFF;
+  -webkit-clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0 100%, 0 0);
+  clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0 100%, 0 0);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+/*# sourceMappingURL=main.css.map */
