--- a/crash-course/css/main.scss
+++ b/crash-course/css/main.scss
@@ -3,6 +3,10 @@ $colors: (
     accent:#FFF6BB,
 );
 
+@function color($color-name){
+    @return map-get($colors,$color-name);
+}
+
 body,html{
     height:100%;
 }
@@ -12,7 +16,7 @@ body{
     margin:0;
 
     #bg{
-        background-color:map-get($colors, primary);
+        background-color:color(primary);
         clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0 100%, 0 0);
         width:100%;
         height:100%;
