--- a/crash-course/css/main.scss
+++ b/crash-course/css/main.scss
@@ -1,7 +1,11 @@
 $colors: (
     primary: #005DFF,
+    primary-light: lighten(#005DFF, 40%),
     accent:#FFF6BB,
 );
+
+$padding:0.9375rem;
+$borders:0.9375rem;
 
 @function color($color-name){
     @return map-get($colors,$color-name);
@@ -22,5 +26,51 @@ body{
         height:100%;
         position:absolute;
         z-index:-1;
+    }
+
+    header a{
+        color:#fff;
+        text-decoration:none;
+        padding:$padding;
+        display:block;
+        text-decoration:uppercase;
+    }
+}
+
+main{
+    section#card{
+        background-color:#fff;
+        padding:1.25rem;
+        margin:1rem auto;
+        border-radius:$borders;
+        box-shadow:0 0.625rem 1.875rem rgba(0,0,0,0.2);
+        width:80%;
+
+        ul {
+            list-style-type:none;
+            margin:0;
+            padding:0;
+
+            li {
+                margin-bottom:0.625rem;
+
+                span.card-avatar{
+                    position:absolute;
+                    width:1.875rem;
+                    height:1.875rem;
+                    background-color:color(primary-light);
+                    border-radius:50%;
+                    margin-right:10px;
+                }
+
+                span.card-dialog{
+                    font-weight:bold;
+                    display:inline-block;
+                    margin-left:max(40px);
+                    margin-top:5px;
+                    margin-bottom:5px;
+                }
+            }
+        }
     }
 }
