--- a/crash-course/css/main.scss
+++ b/crash-course/css/main.scss
@@ -12,6 +12,14 @@ $borders:0.9375rem;
     @return map-get($colors,$color-name);
 }
 
+$desktop:840px;
+
+@mixin desktop{
+    @media (min-width: #{$desktop}){
+        @content;
+    }
+}
+
 body,html{
     height:100%;
 }
@@ -27,6 +35,10 @@ body{
         height:100%;
         position:absolute;
         z-index:-1;
+
+        @include desktop{
+            clip-path: polygon(0 0, 75% 0, 55% 100%, 0% 100%);
+        }
     }
 
     header a{
@@ -39,6 +51,13 @@ body{
 }
 
 main{
+    @include desktop{
+        display:grid;
+        grid-template:50% auto;
+        grid-template-areas:
+            "primary card";
+    }
+
     section#card{
         background-color:#fff;
         padding:1.25rem;
@@ -46,6 +65,13 @@ main{
         border-radius:$borders;
         box-shadow:0 0.625rem 1.875rem rgba(0,0,0,0.2);
         width:80%;
+
+        @include desktop{
+            grid-area:card;
+            height:fit-content;
+            align-self:center;
+            margin:1rem;
+        }
 
         ul {
             list-style-type:none;
@@ -80,10 +106,22 @@ main{
         padding:$padding;
         text-align:center;
 
+        @include desktop{
+            grid-area:primary;
+            text-align:left;
+            margin:4rem 0 0 4rem;
+        }
+
         h1{
             font-size:3rem;
             margin-top:0.625rem;
             text-transform:uppercase;
+
+            @include desktop{
+                width:30%;
+                font-size:4rem;
+                line-height:0.9em;
+            }
         }
 
         p{
@@ -101,6 +139,11 @@ main{
             display:block;
             text-align:center;
             margin: 3.125rem auto 0;
+
+            @include desktop{
+                display:inline-block;
+                padding:$padding $padding * 4;
+            }
         }
     }
 }
