--- a/crash-course/css/main.css
+++ b/crash-course/css/main.css
@@ -17,12 +17,28 @@ body #bg {
   z-index: -1;
 }
 
+@media (min-width: 840px) {
+  body #bg {
+    -webkit-clip-path: polygon(0 0, 75% 0, 55% 100%, 0% 100%);
+            clip-path: polygon(0 0, 75% 0, 55% 100%, 0% 100%);
+  }
+}
+
 body header a {
   color: #fff;
   text-decoration: none;
   padding: 0.9375rem;
   display: block;
   text-transform: uppercase;
+}
+
+@media (min-width: 840px) {
+  main {
+    display: -ms-grid;
+    display: grid;
+    grid-template: 50% auto;
+        grid-template-areas: "primary card";
+  }
 }
 
 main section#card {
@@ -33,6 +49,19 @@ main section#card {
   -webkit-box-shadow: 0 0.625rem 1.875rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.625rem 1.875rem rgba(0, 0, 0, 0.2);
   width: 80%;
+}
+
+@media (min-width: 840px) {
+  main section#card {
+    grid-area: card;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin: 1rem;
+  }
 }
 
 main section#card ul {
@@ -68,10 +97,26 @@ main section#primary {
   text-align: center;
 }
 
+@media (min-width: 840px) {
+  main section#primary {
+    grid-area: primary;
+    text-align: left;
+    margin: 4rem 0 0 4rem;
+  }
+}
+
 main section#primary h1 {
   font-size: 3rem;
   margin-top: 0.625rem;
   text-transform: uppercase;
+}
+
+@media (min-width: 840px) {
+  main section#primary h1 {
+    width: 30%;
+    font-size: 4rem;
+    line-height: 0.9em;
+  }
 }
 
 main section#primary p {
@@ -89,5 +134,12 @@ main section#primary a {
   display: block;
   text-align: center;
   margin: 3.125rem auto 0;
+}
+
+@media (min-width: 840px) {
+  main section#primary a {
+    display: inline-block;
+    padding: 0.9375rem 3.75rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
