--- a/flipbook/main.css
+++ b/flipbook/main.css
@@ -1,1 +1,11 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  border: 1px solid purple;
+}
+/*# sourceMappingURL=main.css.map */
