--- a/flipbook/main.scss
+++ b/flipbook/main.scss
@@ -5,5 +5,38 @@
     transform:translate(-50%,-50%);
     width:20px;
     height:20px;
-    border:1px solid purple;
+    perspective:160px;
+
+    .paper{
+        width:35px;
+        height:45px;
+        background:#fff;
+        border:5px solid blue;
+        position:absolute;
+        border-left:none;
+        transform-origin:0% 50%;
+
+        @for $i from 3 through 12 {
+            &:nth-child(#{$i}){
+                animation:flip 2.5s infinite ease-in-out;
+                animation-delay:$i * 0.5s;
+            }
+        }
+    }
+
+    .paper:nth-child(2){
+        transform:rotate(180deg);
+    }
+}
+
+@keyframes flip {
+    0%{
+        transform:rotateY(0deg);
+    }
+    30%{
+        transform:rotateY(-180deg);
+    }
+    100%{
+        transform:rotateY(-180deg);
+    }
 }
