--- a/flipbook/main.css
+++ b/flipbook/main.css
@@ -6,6 +6,123 @@
           transform: translate(-50%, -50%);
   width: 20px;
   height: 20px;
-  border: 1px solid purple;
+  -webkit-perspective: 160px;
+          perspective: 160px;
+}
+
+.container .paper {
+  width: 35px;
+  height: 45px;
+  background: #fff;
+  border: 5px solid blue;
+  position: absolute;
+  border-left: none;
+  -webkit-transform-origin: 0% 50%;
+          transform-origin: 0% 50%;
+}
+
+.container .paper:nth-child(3) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.container .paper:nth-child(4) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.container .paper:nth-child(5) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
+.container .paper:nth-child(6) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.container .paper:nth-child(7) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
+}
+
+.container .paper:nth-child(8) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.container .paper:nth-child(9) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 4.5s;
+          animation-delay: 4.5s;
+}
+
+.container .paper:nth-child(10) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.container .paper:nth-child(11) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 5.5s;
+          animation-delay: 5.5s;
+}
+
+.container .paper:nth-child(12) {
+  -webkit-animation: flip 2.5s infinite ease-in-out;
+          animation: flip 2.5s infinite ease-in-out;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+
+.container .paper:nth-child(2) {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@-webkit-keyframes flip {
+  0% {
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+  }
+  30% {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+  }
+  100% {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+  }
+}
+
+@keyframes flip {
+  0% {
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+  }
+  30% {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+  }
+  100% {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
+  }
 }
 /*# sourceMappingURL=main.css.map */
