--- a/bees/beesandbomb.css
+++ b/bees/beesandbomb.css
@@ -1,1 +1,18 @@
-/* No CSS *//*# sourceMappingURL=beesandbomb.css.map */
+body {
+  background-color: #222;
+}
+
+div {
+  border-radius: 50%;
+  position: absolute;
+}
+
+#ring {
+  left: 50%;
+  top: 50%;
+  margin: -180px;
+  width: 300px;
+  height: 300px;
+  border: 15px solid #fff;
+}
+/*# sourceMappingURL=beesandbomb.css.map */
