--- a/bees/beesandbomb.css
+++ b/bees/beesandbomb.css
@@ -15,4 +15,71 @@ div {
   height: 300px;
   border: 15px solid #fff;
 }
+
+.dot {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  margin: -15px;
+}
+
+.dot:nth-child(1) {
+  -webkit-transform: rotate(30deg) translate(150px);
+          transform: rotate(30deg) translate(150px);
+}
+
+.dot:nth-child(2) {
+  -webkit-transform: rotate(60deg) translate(150px);
+          transform: rotate(60deg) translate(150px);
+}
+
+.dot:nth-child(3) {
+  -webkit-transform: rotate(90deg) translate(150px);
+          transform: rotate(90deg) translate(150px);
+}
+
+.dot:nth-child(4) {
+  -webkit-transform: rotate(120deg) translate(150px);
+          transform: rotate(120deg) translate(150px);
+}
+
+.dot:nth-child(5) {
+  -webkit-transform: rotate(150deg) translate(150px);
+          transform: rotate(150deg) translate(150px);
+}
+
+.dot:nth-child(6) {
+  -webkit-transform: rotate(180deg) translate(150px);
+          transform: rotate(180deg) translate(150px);
+}
+
+.dot:nth-child(7) {
+  -webkit-transform: rotate(210deg) translate(150px);
+          transform: rotate(210deg) translate(150px);
+}
+
+.dot:nth-child(8) {
+  -webkit-transform: rotate(240deg) translate(150px);
+          transform: rotate(240deg) translate(150px);
+}
+
+.dot:nth-child(9) {
+  -webkit-transform: rotate(270deg) translate(150px);
+          transform: rotate(270deg) translate(150px);
+}
+
+.dot:nth-child(10) {
+  -webkit-transform: rotate(300deg) translate(150px);
+          transform: rotate(300deg) translate(150px);
+}
+
+.dot:nth-child(11) {
+  -webkit-transform: rotate(330deg) translate(150px);
+          transform: rotate(330deg) translate(150px);
+}
+
+.dot:nth-child(12) {
+  -webkit-transform: rotate(360deg) translate(150px);
+          transform: rotate(360deg) translate(150px);
+}
 /*# sourceMappingURL=beesandbomb.css.map */
