--- a/bees/beesandbomb.scss
+++ b/bees/beesandbomb.scss
@@ -20,10 +20,16 @@ div{
 #ring{
     left:50%;
     top:50%;
-    margin:-0.6 * $d-ring;
-    width:$d-ring;
-    height:$d-ring;
-    border:$rt solid $cc;
+
+    &:after{
+        margin:-0.5 * $d-ring;
+        width:$d-ring;
+        height:$d-ring;
+        border:$rt solid $cc;
+        content:'';
+        border-radius:50%;
+        position:absolute;
+    }
 }
 
 .dot{
@@ -33,8 +39,13 @@ div{
         }
     }
 
-    width:$d-dots;
-    height:$d-dots;
-    background-color:$cc;
-    margin:-0.5 * $d-dots;
+    &:after{
+        width:$d-dots;
+        height:$d-dots;
+        background-color:$cc;
+        margin:-0.5 * $d-dots;
+        content:'';
+        position:absolute;
+        border-radius:50%;
+    }
 }
