--- a/bees/beesandbomb.scss
+++ b/bees/beesandbomb.scss
@@ -7,6 +7,7 @@ $d-ring:300px;
 $rt:15px;
 
 $ba:360deg/$n-dots;
+$trans-dist:2*$d-dots;
 
 body{
     background-color:$bg;
@@ -47,5 +48,15 @@ div{
         content:'';
         position:absolute;
         border-radius:50%;
+        animation:play 2s linear infinite;
+    }
+}
+
+@keyframes play{
+    0%{
+        transform:rotateY(0deg) translate($trans-dist) rotateY(0deg);
+    }
+    100%{
+        transform:rotateY(360deg) translate($trans-dist) rotateY(-360deg);
     }
 }
